--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.3",
     "dotenv": "^16.4.1",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
     "font-awesome": "^4.7.0",
     "hbs": "~4.0.1",
-    "mongodb": "^2.2.30",
-    "mongoose": "^4.11.4",
-    "mongoose-auto-increment": "^5.0.1",
+    "mongoose": "^6.3.0",
+    "mongoose-slug-updater": "^3.3.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
     "webpack": "^3.4.1",
